# AndroidUHidJava

./: README.md
uhid-PureJava/app/: build.gradle
uhid-PureJava/app/src/main/java/com/android/commands/hid/: Device.java  Hid.java
uhid-PureJava/app/src/main/jni/: CMakeLists.txt  com_android_commands_hid_Device.cpp
